<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <!-- <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/f_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="bottom|right"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:paddingVertical="80dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"/>


            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:hint="@string/user_name"
                android:minHeight="48dp" />

       <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
           android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/btn_shape"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>