<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <Button
        android:id="@+id/easy"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toTopOf="@+id/medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/easy"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toTopOf="@id/hard"
        app:layout_constraintEnd_toEndOf="@+id/easy"
        app:layout_constraintStart_toStartOf="@+id/easy"
        app:layout_constraintTop_toBottomOf="@+id/easy"
        android:text="@string/medium"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:paddingHorizontal="20dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/medium"
        app:layout_constraintStart_toStartOf="@+id/medium"
        app:layout_constraintTop_toBottomOf="@id/medium"
        android:text="@string/hard"
        android:layout_marginHorizontal="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>